<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.shahi.electrobekia.Home_register">
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="200dp"
        android:layout_height="170dp"
        app:srcCompat="@drawable/eb"
        tools:layout_editor_absoluteX="40dp"
        tools:layout_editor_absoluteY="62dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />
    <EditText
        android:id="@+id/firstN"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/your_name"
        android:padding="15dp"
        android:inputType="textPersonName"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="156dp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/your_mail"
        android:padding="15dp"
        android:inputType="textEmailAddress"
        android:layout_below="@+id/firstN"
        android:layout_alignLeft="@+id/firstN"
        android:layout_alignStart="@+id/firstN" />

    <EditText
        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:padding="15dp"
        android:inputType="textPassword"
        android:layout_below="@+id/email"
        android:layout_alignLeft="@+id/email"
        android:layout_alignStart="@+id/email" />
    <EditText
        android:id="@+id/repassword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/re_password"
        android:padding="15dp"
        android:inputType="textPassword"
        android:layout_below="@+id/password"
        android:layout_alignStart="@+id/password" />
    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:background="@drawable/circle"
        android:textAllCaps="false"
        android:textSize="17sp"
        android:layout_below="@+id/repassword"
        android:layout_centerHorizontal="true" />
    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:text="@string/already_i_have_account"
        android:textAllCaps="false"
        android:layout_below="@+id/btnRegister"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
