<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.shahi.electrobekia.Repair_City">

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="300dp"
        android:layout_height="210dp"
        app:srcCompat="@drawable/eb"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />
    <TextView
        android:id="@+id/text_view_selected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView11"
        android:layout_centerHorizontal="true"
        android:layout_weight="1"
        android:text="@string/select_your_city"
        android:textSize="20sp"
        android:textColor="#000000"
        tools:ignore="ObsoleteLayoutParam" />
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radioGroup"
        android:layout_below="@+id/text_view_selected"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="47dp">

        <RadioButton
            android:id="@+id/radio_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sohag"
            android:onClick="checkButton"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/radio_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qena"
            android:onClick="checkButton"/>

        <RadioButton
            android:id="@+id/radio_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/assuit"
            android:onClick="checkButton"/>

    </RadioGroup>

    <Button
        android:id="@+id/btndone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/done"
        android:background="@drawable/circle"
        android:textAllCaps="false"
        android:textSize="17sp"
        android:layout_marginTop="37dp"
        android:layout_below="@+id/radioGroup"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
