<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.shahi.electrobekia.Login">
    <TextView
        android:text="@string/login_to_eb_world"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView5"
        android:paddingTop="20dp"
        android:textSize="25sp"
        android:textColor="#000000"
        android:paddingLeft="60dp"
        tools:ignore="RtlHardcoded,RtlSymmetry"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/firstN" />

    <EditText
        android:id="@+id/password"
        android:layout_width="311dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:paddingStart="12dp"
        android:imeActionId="@+id/login"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        tools:ignore="RtlSymmetry"
        android:layout_below="@+id/firstN"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/btnlog"
        style="?android:textAppearanceSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@drawable/circle"
        android:text="@string/login"
        android:textColor="#000000"
        android:textStyle="bold"
        tools:ignore="ObsoleteLayoutParam"
        android:textAllCaps="false"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/btnSign_Reg"
        style="?android:textAppearanceSmall"
        android:layout_width="232dp"
        android:layout_height="wrap_content"
        android:background="@null"
        android:gravity="center"
        android:text="@string/noaccount"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textStyle="bold"
        tools:ignore="ObsoleteLayoutParam"
        android:layout_below="@+id/btnlog"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:srcCompat="@drawable/eb"
        tools:layout_editor_absoluteX="175dp"
        tools:layout_editor_absoluteY="153dp"
        android:layout_marginBottom="19dp"
        android:layout_above="@+id/password"
        android:layout_centerHorizontal="true" />
    <EditText
        android:id="@+id/firstN"
        android:layout_width="311dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/your_mail"
        android:padding="10dp"
        android:layout_below="@+id/textView5"
        android:layout_alignStart="@+id/password"
        android:layout_marginTop="199dp" />

</RelativeLayout>
