<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.shahi.electrobekia.Log_Reg_op">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="300dp"
        android:layout_height="300dp"
        app:srcCompat="@drawable/eb"
        tools:layout_editor_absoluteX="175dp"
        tools:layout_editor_absoluteY="153dp"
        android:layout_marginTop="24dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />
    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:background="@drawable/circle"
        android:textAllCaps="false"
        android:textSize="17sp"
        android:layout_below="@+id/imageView"
        android:layout_alignStart="@+id/imageView"
        android:layout_marginStart="37dp"
        android:layout_marginTop="14dp" />
    <Button
        android:id="@+id/btnlogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:background="@drawable/circle"
        android:textAllCaps="false"
        android:textSize="17sp"
        android:layout_alignBaseline="@+id/btnRegister"
        android:layout_alignBottom="@+id/btnRegister"
        android:layout_alignEnd="@+id/imageView"
        android:layout_marginEnd="40dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnRegister"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="31dp"
        android:text="@string/world"
        android:textColor="#000000"
        android:textSize="20sp"/>


</RelativeLayout>
