<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.shahi.electrobekia.Other_cam">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="230dp"
        android:layout_height="190dp"
        android:background="@drawable/eb"
        android:gravity="center"
        android:padding="5dp"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp" />

    <Button
        android:id="@+id/scan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/circle"
        android:text="@string/scan_your_device"
        android:textAllCaps="false"
        android:textSize="17sp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="41dp"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true" />
    <Button
        android:id="@+id/send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/circle"
        android:text="@string/send_your_request"
        android:textAllCaps="false"
        android:textSize="17sp"
        android:layout_marginRight="60dp"
        android:layout_below="@+id/scan"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp" />
    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scan_your_old_device"
        android:textColor="#000000"
        android:textAlignment="center"
        android:textSize="20dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp" />

</RelativeLayout>



