<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context="com.example.shahi.electrobekia.Main_Classify">


    <GridLayout
        android:id="@+id/glayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="2"
        android:rowCount="5"
        android:columnOrderPreserved="false"
        android:padding="14dp">
        <android.support.v7.widget.CardView
    android:layout_width="150dp"
    android:layout_height="150dp"
            android:onClick="true"
    android:layout_marginBottom="16dp"
    android:layout_marginRight="16dp"
    app:cardElevation="8dp"
    app:cardCornerRadius="8dp">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/com"
                android:layout_marginBottom="30dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="23dp"
                android:layout_marginTop="100dp"
                android:text="@string/computers"
                android:textSize="17dp"
                android:textColor="#000000"
                android:textAlignment="center">

            </TextView>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:onClick="true"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/tel"
                android:layout_marginBottom="25dp"
                android:layout_marginTop="13dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="23dp"
                android:layout_marginTop="100dp"
                android:text="@string/telephone"
                android:textSize="17dp"
                android:textColor="#000000"
                android:textAlignment="center">
</TextView>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="150dp"
            android:onClick="true"
            android:layout_height="150dp"
            android:layout_marginBottom="16dp"
            android:layout_marginRight="16dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp">

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/tv"
                android:layout_marginBottom="19dp"
                android:layout_marginTop="10dp"/>
         <TextView   android:layout_width="match_parent"
            android:layout_height="23dp"
             android:layout_marginTop="100dp"
            android:text="@string/tvs"
            android:textSize="17dp"
            android:textColor="#000000"
            android:textAlignment="center">
        </TextView>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:onClick="true"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp">
            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/mo"
                android:layout_marginBottom="19dp"
                android:layout_marginTop="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="23dp"
                android:layout_marginTop="100dp"
                android:text="@string/mobile"
                android:textSize="17dp"
                android:textColor="#000000"
                android:textAlignment="center">

            </TextView>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:onClick="true"
            android:layout_marginBottom="16dp"
            android:layout_marginRight="16dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp">
            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/pr"
                android:layout_marginBottom="19dp"
                android:layout_marginTop="10dp"/>
            <TextView   android:layout_width="match_parent"
                android:layout_height="23dp"
                android:layout_marginTop="100dp"
                android:text="@string/printer"
                android:textSize="17dp"
                android:textColor="#000000"
                android:textAlignment="center"></TextView>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:onClick="true"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp">
            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/eb"
                android:layout_marginBottom="19dp"
                android:layout_marginTop="10dp"/>
            <TextView   android:layout_width="match_parent"
                android:layout_height="23dp"
                android:layout_marginTop="100dp"
                android:text="@string/other"
                android:textSize="17dp"
                android:textColor="#000000"
                android:textAlignment="center"></TextView>
        </android.support.v7.widget.CardView>

    </GridLayout>
</LinearLayout>
